# DataScan

./: pyproject.toml
app/: app.py
